Fixed a few more right to left alignment issues.
git-svn-id: https://plugins.svn.wordpress.org/editorial-calendar/trunk@502174 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/edcal_rtl.css
+++ b/edcal_rtl.css
@@ -12,3 +12,34 @@
 .inline-edit-row fieldset label span.input-text-wrap {
     text-align: right;
 }
+
+#topleft {
+    left: auto;
+    right: 0px;
+}
+
+#topright {
+    right: auto;
+    left: 0px;
+}
+
+#screen-options-link-wrap, #contextual-help-link-wrap {
+    float: left;
+}
+
+.wrap h2 {
+    text-align: right;
+}
+
+.icon32 {
+    float: right;
+}
+
+.post {
+    text-align: right;
+}
+
+.dayhead {
+    min-width: 0;
+    text-align: right;
+}
